# rustcurl

./: .gitignore  CLAUDE.md  COMPARISON.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.local.json
src/: main.rs
src/backend/: curl_backend.rs  mod.rs  reqwest_backend.rs
src/curl/: args.rs  config.rs  error.rs  mod.rs  request.rs  response.rs
