[package]
name = "rustcurl"
version = "0.1.0"
edition = "2024"

[features]
default = ["curl"]
curl = ["dep:curl"]
reqwest = ["dep:reqwest", "dep:tokio"]

[dependencies]
curl = { version = "0.4", optional = true }
reqwest = { git = "https://github.com/sganis/reqwest", optional = true, features = ["negotiate", "json", "blocking"] }
tokio = { version = "1.0", optional = true, features = ["rt", "rt-multi-thread"] }
